--- a/src/main/resources/templates/common/member/register.html
+++ b/src/main/resources/templates/common/member/register.html
@@ -50,7 +50,7 @@
                 <i class="ti-user"></i>
             </div>
             <div id="pass-info" class="clearfix"></div>
-            <button class="btn_1 rounded full-width add_top_30">Register Now!</button>
+            <button class="btn_1 rounded full-width add_top_30">회원 가입</button>
             <div class="text-center add_top_10">계정이 이미 있으신가요? <strong><a th:href="@{/member/login}" href="login.html">로그인</a></strong></div>
         </form>
         <div class="copy">© LETS</div>
