--- a/src/main/resources/templates/common/layout/common_layout_V2.html
+++ b/src/main/resources/templates/common/layout/common_layout_V2.html
@@ -29,7 +29,7 @@
 
     <!--/* 페이지 공통 로그인 팝업 */-->
     <th:block th:if="${session.loginMember == null}">
-        <th:block th:replace="~{/common/layout/fragments/common_sign-in-popup :: sign-in-popup}"></th:block>
+        <th:block th:replace="~{/common/layout/fragments/common_login-popup :: login-popup}"></th:block>
     </th:block>
 
     <div id="toTop"></div><!--/* Back to top button */-->
