--- a/src/main/resources/templates/common/layout/fragments/common_login-popup.html
+++ b/src/main/resources/templates/common/layout/fragments/common_login-popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:fragment="sign-in-popup">
+<th:block th:fragment="login-popup">
     <!-- Sign In Popup -->
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -10,7 +10,7 @@
                     <h4>로그인</h4>
                 </div>
                 <div class="modal-body p-4">
-                    <form th:action="@{/member/login}" th:method="post" th:object="${loginForm}">
+                    <form th:action="@{/member/login}" th:method="post">
                         <div class="sign-in-wrapper">
                             <div style="text-align: center;">
                                 <a href="#"><img src="/images/login/kakao_login_medium_wide.png" width="286" alt=""></a>
@@ -18,42 +18,30 @@
                             <div class="divider"><span>Or</span></div>
                             <div class="form-group">
                                 <label for="email">이메일</label>
-                                <input th:field="*{email}" type="email" class="form-control" name="email" id="email"
+                                <input th:value="${loginForm.email}" type="email" class="form-control" name="email" id="email"
                                        required>
                                 <i class="icon_mail_alt"></i>
                             </div>
                             <div class="form-group">
                                 <label for="password">비밀번호</label>
-                                <input th:field="*{password}" type="password" class="form-control" name="password"
+                                <input th:value="${loginForm.password}" type="password" class="form-control" name="password"
                                        id="password" required>
                                 <i class="icon_lock_alt"></i>
                             </div>
                             <div class="clearfix add_bottom_15">
                                 <div class="checkboxes float-start">
-                                    <label class="container_check">Remember me
-                                        <input type="checkbox">
+                                    <label for="remember" class="container_check">이메일 기억
+                                        <input th:checked="${loginForm.remember}" type="checkbox" name="remember"
+                                               id="remember">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <div class="float-end mt-1"><a id="forgot" href="javascript:void(0);">Forgot
-                                    Password?</a>
+                                <div class="float-end mt-1"><a id="forgot" href="javascript:void(0);">비밀번호를 잊으셨나요?</a>
                                 </div>
                             </div>
-                            <div class="text-center"><input type="submit" value="Log In" class="btn_1 full-width"></div>
+                            <div class="text-center"><input type="submit" value="로그인" class="btn_1 full-width"></div>
                             <div class="text-center">
-                                Don’t have an account? <a th:href="@{/member/register}" href="register.html">Sign up</a>
-                            </div>
-                            <div id="forgot_pw">
-                                <div class="form-group">
-                                    <label for="email_forgot">Please confirm login email below</label>
-                                    <input type="email" class="form-control" name="email_forgot" id="email_forgot">
-                                    <i class="icon_mail_alt"></i>
-                                </div>
-                                <p>You will receive an email containing a link allowing you to reset your password to a
-                                    new
-                                    preferred one.</p>
-                                <div class="text-center"><input type="submit" value="Reset Password" class="btn_1">
-                                </div>
+                                LETS 와 함께 하실까요? <a th:href="@{/member/register}" href="register.html">회원 가입</a>
                             </div>
                         </div>
                     </form>
