--- a/src/main/resources/templates/common/member/login.html
+++ b/src/main/resources/templates/common/member/login.html
@@ -35,6 +35,7 @@
             <div class="divider"><span>Or</span></div>
             <div class="form-group">
                 <label for="email">이메일</label>
+                <th:block></th:block>
                 <input th:field="*{email}" type="email" class="form-control" name="email" id="email" required>
                 <i class="icon_mail_alt"></i>
             </div>
@@ -52,8 +53,8 @@
                 </div>
                 <div class="float-end mt-1"><a id="forgot" href="javascript:void(0);">비밀번호를 잊으셨나요?</a></div>
             </div>
-            <button class="btn_1 rounded full-width">Login to LETS</button>
-            <div class="text-center add_top_10">New to LETS? <strong><a th:href="@{/member/register}" href="/register.html">회원가입!</a></strong>
+            <button class="btn_1 rounded full-width">로그인</button>
+            <div class="text-center add_top_10">LETS 와 함께 하실까요? <strong><a th:href="@{/member/register}" href="/register.html">회원 가입</a></strong>
             </div>
         </form>
         <div class="copy">© LETS</div>
@@ -61,7 +62,9 @@
 </div>
 <!-- /login -->
 
-<th:block th:replace="~{/common/layout/fragments/common_scripts :: scripts}"></th:block>
+<th:block th:replace="~{/common/layout/fragments/common_scripts :: scripts}">
+
+</th:block>
 
 </body>
 
